dns and p3 updates

--- a/.ebextensions/https-redirect-python.config
+++ b/.ebextensions/https-redirect-python.config
@@ -33,9 +33,9 @@ files:
     group: root
     content: |
       RewriteEngine On
-      RewriteCond %{HTTP:X-Forwarded-Proto} !https
-      RewriteCond %{HTTP_USER_AGENT} !ELB-HealthChecker
-      RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+      <If "-n '%{HTTP:X-Forwarded-Proto}' && %{HTTP:X-Forwarded-Proto} != 'https'">
+      RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+      </If>
 
   "/opt/elasticbeanstalk/hooks/config.py":
     mode: "000644"
@@ -73,10 +73,7 @@ files:
         Require all granted
       </Directory>
 
-      WSGIDaemonProcess wsgi processes=%s threads=%s display-name=%%{GROUP} \
-        python-home=/opt/python/run/venv/ \
-        python-path=%s user=%s group=%s \
-        home=%s
+      WSGIDaemonProcess wsgi processes=%s threads=%s display-name=%%{GROUP} \ python-home=/opt/python/run/venv/ \ python-path=%s user=%s group=%s \ home=%s
       WSGIProcessGroup wsgi
       </VirtualHost>
 
@@ -159,10 +156,7 @@ files:
 
 
       def configure_stdout_logger():
-          logging.basicConfig(
-              level=logging.DEBUG,
-              format="%(asctime)-15s %(levelname)-8s %(message)s",
-              stream=sys.stdout)
+          logging.basicConfig( level=logging.DEBUG, format="%(asctime)-15s %(levelname)-8s %(message)s", stream=sys.stdout)
 
 
       def get_python_version():
